# ChangeLog for dev-perl/Test-Base
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Base/ChangeLog,v 1.43 2009/03/27 07:35:54 tove Exp $

*Test-Base-0.58 (27 Mar 2009)

  27 Mar 2009; Torsten Veller <tove@gentoo.org> +Test-Base-0.58.ebuild:
  Version bump

  21 Mar 2009; Jeroen Roovers <jer@gentoo.org> Test-Base-0.56.ebuild:
  Marked ~hppa (bug #261707).

  15 Mar 2009; Brent Baude <ranger@gentoo.org> Test-Base-0.56.ebuild:
  Marking Test-Base-0.56 ~ppc64 for bug 261707

*Test-Base-0.56 (08 Mar 2009)

  08 Mar 2009; Torsten Veller <tove@gentoo.org> +Test-Base-0.56.ebuild:
  Version bump

  13 Feb 2009; Raúl Porcel <armin76@gentoo.org> Test-Base-0.55.ebuild:
  Re-add ~arm/~s390/~sh

*Test-Base-0.55 (08 Dec 2008)

  08 Dec 2008; Robin H. Johnson <robbat2@gentoo.org> +Test-Base-0.55.ebuild:
  Version bump.

  30 Sep 2008; Torsten Veller <tove@gentoo.org> -Test-Base-0.52.ebuild,
  -Test-Base-0.53.ebuild, Test-Base-0.54.ebuild:
  Cleanup

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> Test-Base-0.54.ebuild:
  Stable for HPPA too.

  27 Dec 2007; Andrej Kacian <ticho@gentoo.org> Test-Base-0.54.ebuild:
  Stable on x86.

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> Test-Base-0.54.ebuild:
  amd64 stable

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Test-Base-0.54.ebuild:
  Stable on ppc.

  09 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> Test-Base-0.54.ebuild:
  Stable on sparc

  30 Jul 2007; Raúl Porcel <armin76@gentoo.org> Test-Base-0.54.ebuild:
  alpha/ia64 stable

*Test-Base-0.54 (29 Jun 2007)

  29 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  +Test-Base-0.54.ebuild:
  Version bump

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Test-Base-0.53.ebuild:
  ppc stable

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> Test-Base-0.53.ebuild:
  Stable on Alpha + IA64.

  08 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Test-Base-0.53.ebuild: