@@ -2,9 +2,9 @@ DIST Test-Base-0.54.tar.gz 45525 RMD160 94641fe1bf76550f2ec13a47d98d3e75d8ac06a1
 DIST Test-Base-0.55.tar.gz 46815 RMD160 fed5510b8d1f1008c0cfb205e3ac360ef5b9e690 SHA1 c69102c4fde0131cb711863d618a06b284eea826 SHA256 f05723f5ab09711cbe1f2c24d2766a9f008e89612b5478b9f872bbf0871f7a2c
 DIST Test-Base-0.56.tar.gz 49271 RMD160 f1ef296bcc486b27bd72888ab8ad766b469e5404 SHA1 a21b5abcd2f93c780e81c8051ab3e44a4a8f64bf SHA256 55199a22829beffa55e27c88789bb64a3dfc01a99b67ca96592b3a2e78285548
 DIST Test-Base-0.58.tar.gz 49569 RMD160 eab72bdad6be3f2662753144466ad10eceda361a SHA1 d4f33914c57449fe7588ca164edfb5634655bd53 SHA256 8a8d38d79c922a08bd362fff5672d1b285806b4926f3e5d00edf525c0066f8de
-EBUILD Test-Base-0.54.ebuild 524 RMD160 bdaa14d4c070a1f8f0147cf148223ac98b2468b3 SHA1 f1f13be73e6d8d4eac923074c5f794cdd9e1e627 SHA256 d64de710fbef6735dc920741902f3ac5cbffce096a6a77b8822b1561333ca5bc
+EBUILD Test-Base-0.54.ebuild 527 RMD160 3c398e0eb269cb76056ae953f19145f32e6a3c19 SHA1 780cf132489faff152679bc6e9d8efff48b79af5 SHA256 5fc2d08c7882ad7c091f413c059fed9d03890b1ea30564b2b7068e29d0b9e068
 EBUILD Test-Base-0.55.ebuild 527 RMD160 254e33005857155dc8d163eee92c43b02b71e5a4 SHA1 ec4812c438a3c0e711d267c15c86755f16210ca8 SHA256 9cab2c7af71c06917ae271f89af74e2fbdee183bee2dbca5f1221e0587ada333
-EBUILD Test-Base-0.56.ebuild 521 RMD160 69580f61eb9c1fbc2545877d4e1b06656237f285 SHA1 ed4834fe22713f58adc670f66b1092b98d1214a0 SHA256 5e5f31115b3188f0d8c1ef7fb1b4bb53ee7af73264f1524d66a5d9362bcc5615
-EBUILD Test-Base-0.58.ebuild 522 RMD160 5e833ffbc924453ae8f6b8d3e1a1518be0e9a648 SHA1 121d9754991b26c16197b7d6df36f43f9f2112f9 SHA256 fa4de536d26186b9d009105934c9ae56ae2521c0cd2ca9789667b2e1bf275532
-MISC ChangeLog 5093 RMD160 2cd2c9a97345920c0609bbd28469f8919d32f198 SHA1 889a5f141e3505fbedd2aedd1b76642532390e4f SHA256 81da3a92656e959eb56075ee69039d563dc1c8c471af6305152328de54615590
+EBUILD Test-Base-0.56.ebuild 525 RMD160 dd22a1d0e464cb91c0120ad3893308f86f41b45a SHA1 f10aed75d9be2081203ffb40624990897d92e267 SHA256 670cb35655660e98beac6b8a55faf3637732f0115e497fa39c25048d3e91c222
+EBUILD Test-Base-0.58.ebuild 525 RMD160 c421ba9aac161b021b0c1f0071995a388c13e33a SHA1 85f20b825424716616fd9efc3aad5fb3ec54813e SHA256 3209a4dc08ef8a642fcc9a244b449e8d5bdb97ec8aeff79798e02563523705c0
+MISC ChangeLog 5261 RMD160 5358111d784385ceb6b61ecd56f14bbfee0a356f SHA1 505f94af9935d03fad14dd18601d0f27daaab32e SHA256 6700120006faccf292af7632547148054d34141f83c71663812a60d769ca1e1a
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
