@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Base/Test-Base-0.56.ebuild,v 1.3 2009/03/21 03:23:32 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Base/Test-Base-0.56.ebuild,v 1.4 2009/04/06 15:47:10 armin76 Exp $
 
 EAPI="prefix 2"
 
