@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Test-Base
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Base/ChangeLog,v 1.43 2009/03/27 07:35:54 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Base/ChangeLog,v 1.44 2009/04/06 15:47:10 armin76 Exp $
+
+  06 Apr 2009; Raúl Porcel <armin76@gentoo.org> Test-Base-0.50.ebuild,
+  Test-Base-0.54.ebuild, Test-Base-0.56.ebuild, Test-Base-0.58.ebuild:
+  Add ~arm/~s390/~sh
 
 *Test-Base-0.58 (27 Mar 2009)
 
